<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginBottom="70dp"
    tools:context="in.weareindian.investorapp.ui.lists.ListsFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvListsPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

                <ProgressBar
                    android:id="@+id/progressBarLists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rvListsPost"
                    android:layout_centerHorizontal="true"
                    android:visibility="visible"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llNoData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:src="@drawable/ic_no_data"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvNoDataFound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="No data Found"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvPleaseTryAfterSomeTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="40dp"
                    android:gravity="center"
                    android:text="No data found, Please try after sometime"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/llNoInternet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:src="@drawable/ic_no_internet"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvNoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/no_internet_connection"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvPleaseCheckYourConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:text="@string/please_check_your_internet_connection_and_try_again"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/drawable_button_blue"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>